--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 
 
 version = "0.1"
-group = "wormz.faitems"
+group = "wormz.faitems" 
 archivesBaseName = "faitems"
 
 sourceCompatibility = targetCompatibility = '1.8'
@@ -39,7 +39,7 @@ repositories {
 }
 
 minecraft {
-    version = "1.12.2-14.23.5.2847"
+    version = "1.12.2-14.23.5.2796"
     runDir = "run"
     mappings = "stable_39"
     useDepAts = true
@@ -49,6 +49,7 @@ dependencies {
     deobfProvided "mezz.jei:jei_1.12.2:4.13.1.222:api"
     deobfProvided "net.industrial-craft:industrialcraft-2:2.8.104-ex112"
     runtime "mezz.jei:jei_1.12.2:4.13.1.222"
+    runtime "net.industrial-craft:industrialcraft-2:2.8.104-ex112"
     deobfCompile "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.13.508"
     deobfCompile "CraftTweaker2:CraftTweaker2-API:4.1.13.508"
     deobfCompile "CraftTweaker2:ZenScript:4.1.13.508"
@@ -58,9 +59,11 @@ dependencies {
 jar {
     manifest {
         attributes "Manifest-Version": "1.0"
+        attributes "FMLCorePlugin": "wormz.faitems.ASM.FATCore"
+        attributes "FMLCorePluginContainsFMLMod": "true"
     }
 }
-
+    
 processResources {
     // this will ensure that this task is redone when the versions change.
     inputs.property "version", project.version
@@ -69,11 +72,11 @@ processResources {
     // replace stuff in mcmod.info, nothing else
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
-
+                
         // replace version and mcversion
         expand 'version':project.version, 'mcversion':project.minecraft.version
     }
-
+        
     // copy everything else except the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
