--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@ build
 # other
 eclipse
 run
+/LICENSE.txt
+/LICENSE-Paulscode IBXM Library.txt
+/LICENSE-Paulscode SoundSystem CodecIBXM.txt
+/README.txt
+/CREDITS.txt
+/changelog.txt
