Fix durability bar display error try support ct

--- a/build.gradle
+++ b/build.gradle
@@ -58,9 +58,9 @@ dependencies {
     //runtime "mezz.jei:jei_1.12.2:4.13.1.222"
     compile "cofh:RedstoneFlux:1.12-2.+:deobf"
     compile "cofh:CoFHCore:1.12.2-4.+:deobf"
-    deobfCompile "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.13.508"
-    deobfCompile "CraftTweaker2:CraftTweaker2-API:4.1.13.508"
-    deobfCompile "CraftTweaker2:ZenScript:4.1.13.508"
+    deobfProvided "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.13.508"
+    deobfProvided "CraftTweaker2:CraftTweaker2-API:4.1.13.508"
+    deobfProvided "CraftTweaker2:ZenScript:4.1.13.508"
 
 }
 
